--- a/Aquarium/Aquarium.vcxproj.filters
+++ b/Aquarium/Aquarium.vcxproj.filters
@@ -54,12 +54,21 @@
     <ClCompile Include="Renderable.cpp">
       <Filter>Source Files\Renderables</Filter>
     </ClCompile>
+    <ClCompile Include="Lights.cpp">
+      <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="vertex.glsl">
+    <None Include="normal.fs">
       <Filter>Resource Files\Shaders</Filter>
     </None>
-    <None Include="fragment.glsl">
+    <None Include="normal.vs">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="lightEffects.vs">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="lightEffects.fs">
       <Filter>Resource Files\Shaders</Filter>
     </None>
   </ItemGroup>
@@ -77,6 +86,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Renderable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lights.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
